src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>SomTv_Produkt__c</fullName>
        <label>Produkt</label>
        <picklist>
            <picklistValues>
                <fullName>Sponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spots/Splits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promostory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gewinnspiele</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klassisch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gegengeschäft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Produkthierarchiebene1__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.SomTv_Produkthierarchieebene1__c)</formula>
        <label>Produkthierarchiebene 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_ProjektFormel__c</fullName>
        <formula>Opportunity.SomTv_AdFProjekt__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projekt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Projektname__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projektname</label>
        <referenceTo>SomTv_AdfProjekt__c</referenceTo>
        <relationshipLabel>Opportunity-Produkt</relationshipLabel>
        <relationshipName>Opportunity_Produkt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_ReminderAnzahl__c</fullName>
        <label>Reminder Anzahl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ReminderSek__c</fullName>
        <label>Reminder Sek</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ScharnierAnzahl__c</fullName>
        <label>Scharnier Anzahl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ScharnierSek__c</fullName>
        <label>Scharnier Sek</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_SendeDatumBis__c</fullName>
        <description>Zeigt den Sendezeitraum des Produktes an</description>
        <inlineHelpText>Zeigt den Sendezeitraum des Produktes an</inlineHelpText>
        <label>Sendedatum bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_SendeDatumVon__c</fullName>
        <description>Zeigt den Sendezeitraum des Produktes an</description>
        <inlineHelpText>Zeigt den Sendezeitraum des Produktes an</inlineHelpText>
        <label>Sendedatum von</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_SendeZeitBis__c</fullName>
        <label>Sendezeit bis</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_SendeZeitVon__c</fullName>
        <label>Sendezeit von</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Sender__c</fullName>
        <label>Sender</label>
        <picklist>
            <picklistValues>
                <fullName>SAT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSieben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kabel eins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT.1 Emotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSieben Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kabel eins Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maxdome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSieben Maxx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat.1 Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kabel eins Doku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diverse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Sendezeit__c</fullName>
        <description>Betreffender Monat des Sendezeitraums</description>
        <inlineHelpText>Betreffender Monat des Sendezeitraums</inlineHelpText>
        <label>Sendemonat</label>
        <picklist>
            <picklistValues>
                <fullName>Januar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Februar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>März</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oktober</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dezember</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Skonto__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Skonto in Prozent</description>
        <inlineHelpText>Skonto in Prozent</inlineHelpText>
        <label>Skonto</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SplitsSpots__c</fullName>
        <label>Split-/Spot-/Trailer-Anzahl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Sponsoring__c</fullName>
        <label>Sponsoring</label>
        <picklist>
            <picklistValues>
                <fullName>fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>flexibel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Tarifart__c</fullName>
        <label>Tarifart</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_TechnischeLaenge__c</fullName>
        <label>Technische Länge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Tochter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tochter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity-Produkt (Tochter)</relationshipLabel>
        <relationshipName>Opportunity_Produkt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_TrailerGesamtlaenge__c</fullName>
        <inlineHelpText>Sender und Kundenanteil bei Buchung des Trailer Sponsorings</inlineHelpText>
        <label>Trailer Gesamtlänge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_TrailerSponsoringSek12MinRelevant__c</fullName>
        <inlineHelpText>Kunden-Anteil</inlineHelpText>
        <label>Trailer Sponsoring Sek (12-Min relevant)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_UmfeldFormat__c</fullName>
        <label>Umfeld / Format</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Umsatzaenderung__c</fullName>
        <label>Umsatzänderung</label>
        <picklist>
            <picklistValues>
                <fullName>Einbuchung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kampagnenoptimierung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keine Freigabe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korrektur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preisänderung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmänderung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabattänderung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sendestörung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umbuchung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbeblockreduzierung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zubuchung</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Umsatzdifferenz_MB1__c</fullName>
        <description>Differenz aus aktuellem MB1 und MB1 des ersten Factsheets.</description>
        <formula>SomTv_MB1__c - SomTv_MB1_1FS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Differenz aus aktuellem MB1 und MB1 des ersten Factsheets.</inlineHelpText>
        <label>Umsatzdifferenz MB1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Umsatzdifferenz_MN3__c</fullName>
        <description>Differenz aus aktuellem MN3 und MN3 des ersten Factsheets.</description>
        <formula>SomTv_MN3__c - SomTv_MN3_1FS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Differenz aus aktuellem MN3 und MN3 des ersten Factsheets.</inlineHelpText>
        <label>Umsatzdifferenz MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Werbeprodukt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Werbeprodukt</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity-Produkt (Werbeprodukt)</relationshipLabel>
        <relationshipName>Opportunity_Produkt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Wochentag__c</fullName>
        <label>Wochentag</label>
        <picklist>
            <picklistValues>
                <fullName>Montag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dienstag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mittwoch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donnerstag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freitag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samstag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mo - Fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sa - So</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mo - Do</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mo - So</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mo - Sa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield__c</fullName>
        <description>Yield des Opportunityprodukts (AdFactory Bausteins)</description>
        <formula>IF (SomTv_MB3_Kopf__c=0, 0, SomTv_MN3__c/SomTv_MB3_Kopf__c)</formula>
        <inlineHelpText>Yield des Opportunityprodukts (AdFactory Bausteins)</inlineHelpText>
        <label>Yield</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volumen__c</fullName>
        <label>Volumen</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <validationRules>
        <fullName>SomTv_OliQuantity</fullName>
        <active>true</active>
        <description>Quantity darf nur &quot;1&quot; sein</description>
        <errorConditionFormula>Quantity &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Als Menge darf nur 1 eingetragen werden</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_SendezeitBis</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id != $Label.ProfileIdAdmin
&amp;&amp;
NOT ( ISBLANK ( SomTv_SendeZeitBis__c ) ) 
&amp;&amp;
NOT ( 
REGEX( SomTv_SendeZeitBis__c , &quot;^([0-1][0-9]|[2][0-3]):([0-5][0-9])$&quot;) 
)</errorConditionFormula>
        <errorDisplayField>SomTv_SendeZeitBis__c</errorDisplayField>
        <errorMessage>keine gültige Uhrzeit ( Format hh:mm)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_SendezeitVon</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id != $Label.ProfileIdAdmin 
&amp;&amp; 
NOT ( ISBLANK ( SomTv_SendeZeitVon__c ) ) 
&amp;&amp;
NOT ( 
REGEX( SomTv_SendeZeitVon__c , &quot;^([0-1][0-9]|[2][0-3]):([0-5][0-9])$&quot;) 
)</errorConditionFormula>
        <errorDisplayField>SomTv_SendeZeitVon__c</errorDisplayField>
        <errorMessage>keine gültige Uhrzeit ( Format hh:mm)</errorMessage>
    </validationRules>
</CustomObject>